# forecasting-inventory-alert-system

./: pyproject.toml
src/: main.ipynb
src/datasets/: coffee_shop_inventory.csv  coffee_shop_inventory_2y.csv
